# github-traffic-tracker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml  pytest.ini  run_tests.py  setup-gists.py  setup.py  version.py
.github/: CODEOWNERS  pull_request_template.md  release-template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: publish.yml  traffic-badges.yml
docs/: parameters.md  platform-support.md
docs/stats/: README.md  index.html
scripts/: backfill_stats_fields.py  generate-backlinks.py  generate-test-data.py  install-hooks.sh  sync-versions.py  update-version.sh  verify_stats_migration.py
scripts/hooks/: post-checkout  post-commit  pre-commit  pre-push
src/ghtraf/: __init__.py  __main__.py  _version.py  channels.py  cli.py  config.py  configure.py  gh.py  gist.py  hints.py  output.py
src/ghtraf/commands/: __init__.py  create.py  init.py
src/ghtraf/lib/: README.md  __init__.py
src/ghtraf/lib/log_lib/: channels.py  manager.py
src/ghtraf/lib/plan_lib/: __init__.py  executor.py  file_ops.py  renderer.py
src/ghtraf/lib/preserve_lib/: __init__.py  destination.py
src/ghtraf/templates/docs/stats/: index.html
tests/: conftest.py  test_cli.py  test_config.py  test_configure.py  test_core_lib.py  test_create.py  test_executor_bridge.py  test_gist.py  test_gist_e2e.py  test_hints.py  test_init.py  test_log_lib.py  test_output.py  test_plan_lib.py  test_preserve_lib.py  test_templates.py  test_version.py
tests/one-offs/: _backfill_preview.json  _pre_backfill_state.json  _pre_star_fix_state.json  backfill_ciruns.py  backfill_organic_unique.py  backfill_stats_fields.py  backfill_unique_counts.py  backup_placeholder_gists.py  cleanup_placeholder_gists.py  fix_expired_uniques.py  fix_false_organic_zeros.py  fix_migration_timestamps.py  fix_overwritten_stars.py  rename_gists.py  test_merge_logic.py  test_plan_lib_composability.py  verify_dashboard_ids.py  verify_week_alignment.py
tests/one-offs/test_dashboard_data/: archive-2025-12.json  archive-2026-01.json  archive.json  state.json  test_dashboard.html
tests/one-offs/thinking/: README.md  benchmark_backlinks.py  extract_plan_from_jsonl.py  inspect_jsonl_schema.py  merge_claude_json.py  search_session_log.py  vault-graph.json
tests/research/ci-clone-counting/: README.md  analyze.py  manifest.json  run_experiment.bat  run_experiment.py
tests/research/ci-clone-counting/data/experiments/: exp-00-baseline.json  exp-01-no-checkout.json  exp-02-single-checkout.json  exp-03-fetch-depth.json  exp-04-double-checkout.json  exp-05-matrix-3x3.json  exp-06-multi-run.json  exp-07-manual-calibration.json  exp-08-pat-vs-token.json  exp-09-pages-build.json  exp-10-replicate-single.json  (+1 more)
tests/research/ci-clone-counting/testbed-repo-files/: README.md
tests/research/ci-clone-counting/testbed-workflows/: exp-01-no-checkout.yml  exp-02-single-checkout.yml  exp-03-fetch-depth.yml  exp-04-double-checkout.yml  exp-05-matrix-3x3.yml  exp-06-multi-run.yml  exp-07-manual-calibration.yml  exp-08-pat-vs-token.yml  exp-09-pages-build.yml  exp-10-replicate-single.yml  exp-11-replicate-matrix.yml  observe-traffic.yml
tests/test-data/: dashboard-readme-template.md  dashboard-template.html  workflow-template.yml
tests/test-data/repos/papers/: README.md  SOURCE.md
